# ostrom-interview

./: .gitignore  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: unit-tests.yml
src/ostrom/: app.py  domain.py  routers.py  services.py
test/: conftest.py  location_prices_small.csv  test_routers.py  test_services.py
