[metadata]
name = ostrom-interview
version = 0.1
description = Code for the OSTROM Interview challenge.
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = ostrom, interview, job
license = MIT
classifiers =
    Framework :: FastAPI
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
python_version >= "3.8"
install_requires =
    fastapi
    pydantic
    uvicorn
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = *.csv, *.md, VERSION, CHANGELOG, LICENSE
ostrom = data/*.csv


[options.extras_require]
test = tox; pytest

[options.entry_points]
console_scripts =
  ostrom = ostrom.app:main